test/Dialect/LLZK/array_read_fail.llzk
// RUN: llzk-opt %s -split-input-file -verify-diagnostics

llzk.func @arr_constant_index() -> index {
  %a = arith.constant 45 : index // expected-note {{prior use here}}
  %b = arith.constant 214 : index
  %c = arith.constant 2 : index
  %r = llzk.new_array %a, %b, %c : !llzk.array<3 x index>
  // expected-error@+1 {{use of value '%a' expects different type than prior uses: '!llzk.array<3 x index>' vs 'index'}}
  %i = llzk.readarr %a[%c] : !llzk.array<3 x index>, index
  return %i: index
}
// -----

llzk.func @arr_mix_index(%a: index, %b: index) -> index {
  %c = arith.constant 324 : index
  %d = arith.constant 999 : index 
  %i = arith.constant 0 : index
  %r = llzk.new_array %a, %b, %c, %d: !llzk.array<4 x index> // expected-note {{prior use here}}
  // expected-error@+1 {{use of value '%r' expects different type than prior uses: 'index' vs '!llzk.array<4 x index>'}}
  %v = llzk.readarr %r[%r] : !llzk.array<4 x index>, index
  return %v: index
}
// -----

llzk.func @arr_mix_index(%a: index, %b: index) -> index {
  %c = arith.constant 324 : index
  %d = arith.constant 999 : index 
  %i = arith.constant 0 : index
  %f = llzk.constfelt 6744573456376 // expected-note {{prior use here}}
  %r = llzk.new_array %a, %b, %c, %d: !llzk.array<4 x index> 
  // expected-error@+1 {{use of value '%f' expects different type than prior uses: 'index' vs '!llzk.felt'}}
  %v = llzk.readarr %r[%f] : !llzk.array<4 x index>, index
  return %v: index
}
// -----

llzk.func @arr_wrong_array_elem_type(%a: !llzk.felt) -> !llzk.array<1 x !llzk.felt> {
  %i = arith.constant 0 : index
  %r = llzk.new_array %a: !llzk.array<1 x !llzk.felt>
  // expected-error@+1 {{'llzk.readarr' op failed to verify that result type matches with arr_ref element type}}
  %v = llzk.readarr %r[%i] : !llzk.array<1 x !llzk.felt>, index
  return %r: !llzk.array<1 x !llzk.felt>
}
